--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -14,6 +14,8 @@
 #  updated_at :datetime
 #  cluster    :string(255)
 #  grad_year  :string(255)
+#  department :string(255)
+#  unexcused  :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
